--- a/DsiCodetech.Administrador.Domain/DsiCodetech.Administrador.Domain.csproj
+++ b/DsiCodetech.Administrador.Domain/DsiCodetech.Administrador.Domain.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E37E0E09-0746-42DA-957F-522FF7CC461F}</ProjectGuid>
+    <ProjectGuid>{E4C5DE7C-77AD-4CCF-BC41-EE4A49E095F1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DsiCodetech.Administrador.Business</RootNamespace>
-    <AssemblyName>DsiCodetech.Administrador.Business</AssemblyName>
+    <RootNamespace>DsiCodetech.Administrador.Domain</RootNamespace>
+    <AssemblyName>DsiCodetech.Administrador.Domain</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
