--- a/DsiCodetech.Administrador.Repository/App.config
+++ b/DsiCodetech.Administrador.Repository/App.config
@@ -9,4 +9,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="pos_adminEntities" connectionString="metadata=res://*/DcGeneral.csdl|res://*/DcGeneral.ssdl|res://*/DcGeneral.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-CVOMG1OH;initial catalog=pos_admin;persist security info=True;user id=sa;password=Sistemas410;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
