se agrego clave_producto_serv_repository

--- a/DsiCodetech.Administrador.Repository/DsiCodetech.Administrador.Repository.csproj
+++ b/DsiCodetech.Administrador.Repository/DsiCodetech.Administrador.Repository.csproj
@@ -56,6 +56,7 @@
     <Compile Include="clave_producto_serv.cs">
       <DependentUpon>Db_General_Facturacion.tt</DependentUpon>
     </Compile>
+    <Compile Include="Clave_Producto_Serv_Repository.cs" />
     <Compile Include="Db_General_Facturacion.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
