--- a/DsiCodetech.Administrador.Domain/DsiCodetech.Administrador.Domain.csproj
+++ b/DsiCodetech.Administrador.Domain/DsiCodetech.Administrador.Domain.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClaveProductoServicioDM.cs" />
+    <Compile Include="PaisDM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
