--- a/DsiCodetech.Administrador.Domain/DsiCodetech.Administrador.Domain.csproj
+++ b/DsiCodetech.Administrador.Domain/DsiCodetech.Administrador.Domain.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClaveProductoServicioDM.cs" />
+    <Compile Include="ExportacionDM.cs" />
     <Compile Include="PaisDM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
