--- a/DsiCodetech.Administrador.Domain/DsiCodetech.Administrador.Domain.csproj
+++ b/DsiCodetech.Administrador.Domain/DsiCodetech.Administrador.Domain.csproj
@@ -47,6 +47,7 @@
     <Compile Include="MonedaDM.cs" />
     <Compile Include="PaisDM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TipoComprobanteDM.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
