Se agrego FormaPagoDM

--- a/DsiCodetech.Administrador.Domain/DsiCodetech.Administrador.Domain.csproj
+++ b/DsiCodetech.Administrador.Domain/DsiCodetech.Administrador.Domain.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="ClaveProductoServicioDM.cs" />
     <Compile Include="ExportacionDM.cs" />
+    <Compile Include="FormaPagoDM.cs" />
     <Compile Include="MesDM.cs" />
     <Compile Include="MonedaDM.cs" />
     <Compile Include="PaisDM.cs" />
