--- a/DsiCodetech.Administrador.Domain/DsiCodetech.Administrador.Domain.csproj
+++ b/DsiCodetech.Administrador.Domain/DsiCodetech.Administrador.Domain.csproj
@@ -48,6 +48,7 @@
     <Compile Include="MetodoPagoDM.cs" />
     <Compile Include="MonedaDM.cs" />
     <Compile Include="PaisDM.cs" />
+    <Compile Include="PeriocidadDM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TipoComprobanteDM.cs" />
     <Compile Include="TipoRelacionDM.cs" />
