--- a/DsiCodetech.Administrador.Business/DsiCodetech.Administrador.Business.csproj
+++ b/DsiCodetech.Administrador.Business/DsiCodetech.Administrador.Business.csproj
@@ -41,10 +41,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interface\IPaisBusiness.cs" />
+    <Compile Include="PaisBusiness.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Interface\" />
+    <ProjectReference Include="..\DsiCodetech.Administrador.Domain\DsiCodetech.Administrador.Domain.csproj">
+      <Project>{E4C5DE7C-77AD-4CCF-BC41-EE4A49E095F1}</Project>
+      <Name>DsiCodetech.Administrador.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DsiCodetech.Administrador.Repository\DsiCodetech.Administrador.Repository.csproj">
+      <Project>{18D22FC9-4BF8-44CC-936C-336085ABBC68}</Project>
+      <Name>DsiCodetech.Administrador.Repository</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
