--- a/DsiCodetech.Administrador.Business/DsiCodetech.Administrador.Business.csproj
+++ b/DsiCodetech.Administrador.Business/DsiCodetech.Administrador.Business.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interface\IMonedaBusiness.cs" />
     <Compile Include="Interface\IPaisBusiness.cs" />
     <Compile Include="MonedaBusiness.cs" />
     <Compile Include="PaisBusiness.cs" />
