--- a/DsiCodetech.Administrador.Web/packages.config
+++ b/DsiCodetech.Administrador.Web/packages.config
@@ -26,6 +26,7 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net48" />
   <package id="NLog" version="4.7.0" targetFramework="net48" />
+  <package id="NLog.Schema" version="4.7.0" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net48" />
 </packages>
