--- a/DsiCodetech.Administrador.Web/packages.config
+++ b/DsiCodetech.Administrador.Web/packages.config
@@ -35,6 +35,7 @@
   <package id="Unity.Abstractions" version="5.11.6" targetFramework="net48" />
   <package id="Unity.Container" version="5.11.9" targetFramework="net48" />
   <package id="Unity.Mvc5" version="1.4.0" targetFramework="net48" />
+  <package id="Unity.WebAPI" version="5.4.0" targetFramework="net48" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net48" />
 </packages>
