se agregaron las reglas del logger para la insercion de datos en base de datos.

--- a/DsiCodetech.Administrador.Web/DsiCodetech.Administrador.Web.csproj
+++ b/DsiCodetech.Administrador.Web/DsiCodetech.Administrador.Web.csproj
@@ -209,6 +209,9 @@
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="NLog.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="NLog.xsd">
       <SubType>Designer</SubType>
     </None>
