--- a/DsiCodetech.Administrador.Web/packages.config
+++ b/DsiCodetech.Administrador.Web/packages.config
@@ -29,7 +29,8 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
   <package id="NLog" version="5.0.0" targetFramework="net48" />
-  <package id="NLog.Schema" version="4.7.0" targetFramework="net48" />
+  <package id="NLog.Config" version="4.7.15" targetFramework="net48" />
+  <package id="NLog.Schema" version="4.7.15" targetFramework="net48" />
   <package id="NLog.Web" version="5.0.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net48" />
