se agrego la clase base del tipo tiporelacionbusiness

--- a/DsiCodetech.Administrador.Business/DsiCodetech.Administrador.Business.csproj
+++ b/DsiCodetech.Administrador.Business/DsiCodetech.Administrador.Business.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegimenFiscalBusiness.cs" />
     <Compile Include="TipoComprobanteBusiness.cs" />
+    <Compile Include="TipoRelacionBusiness.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
