--- a/DsiCodetech.Administrador.Business/DsiCodetech.Administrador.Business.csproj
+++ b/DsiCodetech.Administrador.Business/DsiCodetech.Administrador.Business.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Interface\IPaisBusiness.cs" />
     <Compile Include="Interface\IRegimenFiscalBusiness.cs" />
     <Compile Include="Interface\ITipoComprobanteBusiness.cs" />
+    <Compile Include="Interface\ITipoRelacionBusiness.cs" />
     <Compile Include="MonedaBusiness.cs" />
     <Compile Include="PaisBusiness.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
