--- a/DsiCodetech.Administrador.Web/DsiCodetech.Administrador.Web.csproj
+++ b/DsiCodetech.Administrador.Web/DsiCodetech.Administrador.Web.csproj
@@ -184,6 +184,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\UnityConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\FacturacionController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\RegimenFiscalController.cs" />
     <Compile Include="Dto\RegimenFiscalDto.cs" />
