--- a/DsiCodetech.Administrador.Business/DsiCodetech.Administrador.Business.csproj
+++ b/DsiCodetech.Administrador.Business/DsiCodetech.Administrador.Business.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Interface\IRegimenFiscalBusiness.cs" />
     <Compile Include="Interface\ITipoComprobanteBusiness.cs" />
     <Compile Include="Interface\ITipoRelacionBusiness.cs" />
+    <Compile Include="MetodoPagoBusiness.cs" />
     <Compile Include="MonedaBusiness.cs" />
     <Compile Include="PaisBusiness.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
