--- a/DsiCodetech.Administrador.Business/DsiCodetech.Administrador.Business.csproj
+++ b/DsiCodetech.Administrador.Business/DsiCodetech.Administrador.Business.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="ExportacionBusiness.cs" />
     <Compile Include="Interface\IExportacionBusiness.cs" />
+    <Compile Include="Interface\IMetodoPagoBusiness.cs" />
     <Compile Include="Interface\IMonedaBusiness.cs" />
     <Compile Include="Interface\IPaisBusiness.cs" />
     <Compile Include="Interface\IRegimenFiscalBusiness.cs" />
