se agrego  los elementos clave de la clase forma de pago business

--- a/DsiCodetech.Administrador.Business/DsiCodetech.Administrador.Business.csproj
+++ b/DsiCodetech.Administrador.Business/DsiCodetech.Administrador.Business.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExportacionBusiness.cs" />
+    <Compile Include="FormaPagoBusiness.cs" />
     <Compile Include="Interface\IExportacionBusiness.cs" />
     <Compile Include="Interface\IMetodoPagoBusiness.cs" />
     <Compile Include="Interface\IMonedaBusiness.cs" />
