--- a/DsiCodetech.Administrador.Business/DsiCodetech.Administrador.Business.csproj
+++ b/DsiCodetech.Administrador.Business/DsiCodetech.Administrador.Business.csproj
@@ -56,6 +56,7 @@
     <Compile Include="MetodoPagoBusiness.cs" />
     <Compile Include="MonedaBusiness.cs" />
     <Compile Include="PaisBusiness.cs" />
+    <Compile Include="PeriocidadBusiness.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegimenFiscalBusiness.cs" />
     <Compile Include="TipoComprobanteBusiness.cs" />
