se agrego la clase UsoCfdiBusiness base con los elementos esenciales de trabajo

--- a/DsiCodetech.Administrador.Business/DsiCodetech.Administrador.Business.csproj
+++ b/DsiCodetech.Administrador.Business/DsiCodetech.Administrador.Business.csproj
@@ -62,6 +62,7 @@
     <Compile Include="RegimenFiscalBusiness.cs" />
     <Compile Include="TipoComprobanteBusiness.cs" />
     <Compile Include="TipoRelacionBusiness.cs" />
+    <Compile Include="UsoCfdiBusiness.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
