--- a/DsiCodetech.Administrador.Business/DsiCodetech.Administrador.Business.csproj
+++ b/DsiCodetech.Administrador.Business/DsiCodetech.Administrador.Business.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClaveProductoServiciosBusiness.cs" />
+    <Compile Include="ClienteBusiness.cs" />
     <Compile Include="ExportacionBusiness.cs" />
     <Compile Include="FormaPagoBusiness.cs" />
     <Compile Include="Interface\IClaveProductoServiciosBusiness.cs" />
