se agrego la implementacion de la interfaz

--- a/DsiCodetech.Administrador.Business/DsiCodetech.Administrador.Business.csproj
+++ b/DsiCodetech.Administrador.Business/DsiCodetech.Administrador.Business.csproj
@@ -46,6 +46,7 @@
     <Compile Include="ExportacionBusiness.cs" />
     <Compile Include="FormaPagoBusiness.cs" />
     <Compile Include="Interface\IClaveProductoServiciosBusiness.cs" />
+    <Compile Include="Interface\IClienteBusiness.cs" />
     <Compile Include="Interface\IExportacionBusiness.cs" />
     <Compile Include="Interface\IFormaPagoBusiness.cs" />
     <Compile Include="Interface\IMesBusiness.cs" />
