--- a/DsiCodetech.Administrador.Repository/DsiCodetech.Administrador.Repository.csproj
+++ b/DsiCodetech.Administrador.Repository/DsiCodetech.Administrador.Repository.csproj
@@ -387,6 +387,7 @@
     <Compile Include="TipoComprobanteRepository.cs" />
     <Compile Include="TipoRelacionRepository.cs" />
     <Compile Include="UsoCfdiRepository.cs" />
+    <Compile Include="VentaRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
