--- a/DsiCodetech.Administrador.Web/bin/NLog.config
+++ b/DsiCodetech.Administrador.Web/bin/NLog.config
@@ -26,7 +26,7 @@
            dbProvider="System.Data.SqlClient"
            keepConnection="true"
            useTransactions="true"
-           connectionString="data source=LAPTOP-CVOMG1OH;initial catalog=db_cfdi_facturas;persist security info=True;user id=sa;password=Sistemas410;"
+           connectionString="data source=LAPTOP-CVOMG1OH;initial catalog=pos_admin;persist security info=True;user id=sa;password=Sistemas410;"
           commandText="INSERT INTO Logs(EventDateTime, EventLevel, UserName, MachineName, EventMessage, ErrorSource, ErrorClass, ErrorMethod, ErrorMessage, InnerErrorMessage) VALUES (@EventDateTime, @EventLevel, @UserName, @MachineName, @EventMessage, @ErrorSource, @ErrorClass, @ErrorMethod, @ErrorMessage, @InnerErrorMessage)">
       <parameter name="@EventDateTime" layout="${date:s}" />
       <parameter name="@EventLevel" layout="${level}" />
